@@ -3,9 +3,13 @@ package com.EasyShiftScheduler.CalEnder.Security;
 import com.EasyShiftScheduler.CalEnder.Entities.User;
 import com.EasyShiftScheduler.CalEnder.Repositories.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
 import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
+
 @Service
 public class CustomUserDetailsService  implements UserDetailsService {
     @Autowired
@@ -19,7 +23,11 @@ public class CustomUserDetailsService  implements UserDetailsService {
         return new org.springframework.security.core.userdetails.User(
                 user.getUsername(),
                 user.getPassword(),
-                Collections.emptyList()
+                List.of(user.getRoles().split(","))
+                        .stream()
+                        .map(SimpleGrantedAuthority::new)
+                        .collect(Collectors.toList())
         );
     }
+
 }
